--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dominant-color": "0.0.1",
     "googleapis": "^9.0.0",
     "serialport": "4.0.0-rc1",
-    "speakable": "https://github.com/joestrong/node-speakable/tarball/develop"
+    "speakable": "https://github.com/joestrong/node-speakable/tarball/develop",
+    "tarantool-driver": "^2.0.1"
   }
 }
